Change AutoBidLogic (Trigger) AuctionManager -> AuctionService: trigger if new AutoBid can bid => persist to DB